# noir

./: Cargo.toml
acvm-repo/acir/: Cargo.toml
acvm-repo/acir_field/: Cargo.toml
acvm-repo/acir_field/src/: lib.rs
acvm-repo/acvm/: Cargo.toml
acvm-repo/acvm/tests/: solver.rs
acvm-repo/acvm_js/: Cargo.toml
acvm-repo/acvm_js/src/: black_box_solvers.rs  execute.rs
acvm-repo/blackbox_solver/: Cargo.toml
acvm-repo/blackbox_solver/src/: curve_specific_solver.rs  hash.rs
acvm-repo/bn254_blackbox_solver/benches/: criterion.rs
acvm-repo/brillig/: Cargo.toml
acvm-repo/brillig_vm/: Cargo.toml
acvm-repo/t256_blackbox_solver/: Cargo.toml
acvm-repo/t256_blackbox_solver/benches/: criterion.rs
acvm-repo/t256_blackbox_solver/src/: lib.rs  poseidon2.rs  poseidon2_constants.rs
compiler/noirc_driver/: Cargo.toml
compiler/noirc_evaluator/: Cargo.toml
compiler/noirc_frontend/: Cargo.toml
compiler/wasm/: Cargo.toml  package.json
noir_stdlib/src/: compat.nr
noir_stdlib/src/collections/: bounded_vec.nr
noir_stdlib/src/field/: mod.nr  t256.nr
noir_stdlib/src/hash/: mod.nr
noir_stdlib/src/ops/: arith.nr
tooling/acvm_cli/: Cargo.toml
tooling/artifact_cli/: Cargo.toml
tooling/ast_fuzzer/: Cargo.toml
tooling/debugger/: Cargo.toml
tooling/debugger/src/: dap.rs  repl.rs
tooling/inspector/: Cargo.toml
tooling/nargo_cli/: Cargo.toml
tooling/noirc_abi/: Cargo.toml
tooling/noirc_abi_wasm/: Cargo.toml
tooling/noirc_artifacts_info/: Cargo.toml
tooling/profiler/: Cargo.toml
tooling/ssa_executor/: Cargo.toml
tooling/ssa_fuzzer/: Cargo.toml
(+29 files in other folders)
