[package]
name = "acir_field"
description = "The field implementation being used by ACIR."
# x-release-please-start-version
version = "1.0.0-beta.20"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true

ark-bn254.workspace = true
ark-bls12-381 = { workspace = true, optional = true }
ark-ff.workspace = true
ark-secp256r1 = { workspace= true, optional = true }
ark-tom256 = { workspace = true, optional = true }
cfg-if.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[features]
bn254 = []
bls12_381 = ["dep:ark-bls12-381"]
p256 = ["dep:ark-secp256r1"]
t256 = ["dep:ark-tom256"]

[[bench]]
name = "field_element"
harness = false
